@@ -8,7 +8,7 @@ Imports: graphics, methods, stats, utils,
         Biobase (>= 2.18.0), CGHbase (>= 1.18.0), CGHcall (>= 2.18.0),
         DNAcopy (>= 1.32.0), GenomicRanges (>= 1.20), IRanges (>= 2.2),
         matrixStats (>= 0.50.2), R.utils (>= 2.3.0), Rsamtools (>= 1.20),
-        BiocParallel (>= 1.6.6), future (>= 0.14.0)
+        BiocParallel (>= 1.6.6), future (>= 1.14.0), future.apply (>= 1.3.0)
 Suggests: BiocStyle (>= 1.8.0), BSgenome (>= 1.38.0), digest (>= 0.6.8),
         GenomeInfoDb (>= 1.6.0), R.cache (>= 0.12.0)
 Description: Quantitative DNA sequencing for chromosomal aberrations.
