@@ -31,6 +31,7 @@ importFrom(utils, data, maintainer, packageVersion, read.table, write.table)
 importFrom(GenomicRanges, GRanges)
 importFrom(IRanges, IRanges)
 importFrom(BiocParallel, bplapply)
+importFrom(future.apply, future_apply, future_lapply)
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # EXPORTS
