@@ -5,7 +5,8 @@ Version: 1.21.1-9000 [2019-09-03]
 
 SIGNIFICANT CHANGES:
 
- * Package now imports the 'future' package; previously it was only suggested.
+ * Package now imports the 'future' and 'future.apply' packages; previously
+   the 'future' was listed as a suggested package.
 
 IMPROVEMENTS:
 
@@ -14,6 +15,9 @@ IMPROVEMENTS:
    data type (instead of the default NA, which is a logical value).
 
 SOFTWARE QUALITY:
+
+ * Using future_lapply() and future_apply() of the well-tested future.apply
+   package instead of internal analogue implementations.
 
  * TESTS: Now testing numerical reproducibility also for parallel processing
    (using future strategies 'multisession' and 'multicore').
